--- a/app/index.html
+++ b/app/index.html
@@ -1920,5 +1920,7 @@
 
   <script src="/lib/furcanIconPicker/iconpicker-1.5.0.js"></script>
 
+  <script type="text/javascript" src="js/shuttle.js"></script>
+
 </html>
 <!--  -->
